--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+<% if flash[:notice] %>
+  <div class="flash" id="notice">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
+
+<% if flash[:alert] %>
+  <div class="flash" id="alert">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
 <%= yield %>
 
 </body>
