--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,6 @@
   %head
     %title Searchandrestore
     = stylesheet_link_tag :all
-    = javascript_include_tag :defaults
     = csrf_meta_tag
 
   %body
@@ -17,4 +16,6 @@
       = flash[:alert]
   
   = yield
+
+  = javascript_include_tag ['jquery-5.1.min.js']
   
