--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title Searchandrestore
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag 'base'
     = csrf_meta_tag
 
   %body
