--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,12 @@
       .flash#alert
         = flash[:alert]
     
-    = yield
+
+    .masthead
+      .site-container
+        Blah
+    .site-container
+      = yield
 
     = javascript_include_tag ['jquery-5.1.min.js']
   
