--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,7 @@
 
     .masthead
       .site-container
+        = image_tag('logo.png', :alt => 'Search and Restore', :id => 'logo')
         Blah
     .site-container
       = yield
