--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -1,5 +1,5 @@
 @import "components/forms";
-
+$ORANGE: '#ff9900';
 
 body {
   line-height: 1.2;
@@ -8,6 +8,11 @@ body {
   margin:0;
   padding:0;
   background: url(/images/body_bg.png);
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 #logo {
   position: absolute;
@@ -23,9 +28,35 @@ body {
     position: relative;
   }
 }
+.masthead-top {
+  height: 126px;
+}
+
 .site-container {
   width: 960px;
   margin: 0px auto;
+}
+.nav {
+  li {
+    float: left;
+    a {
+      display: block;
+      cursor: pointer;
+      line-height: 16px;
+      padding: 3px 6px 2px 6px;
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 14px;
+      text-decoration: none;
+    }
+    &.selected,
+    &:hover {
+      a {
+        background-color: #ff9900;
+      }
+    }
+  }
 }
 .clear {
   clear: both;
