--- a/public/stylesheets/sass/grid.scss
+++ b/public/stylesheets/sass/grid.scss
@@ -1,49 +1,10 @@
-.jazz fieldset {
-  border: none;
-  padding: 0;
-  margin: 0; }
-.jazz .field {
-  margin-bottom: 20px;
-  overflow: hidden; }
-  .jazz .field input[type='text'],
-  .jazz .field input[type='password'],
-  .jazz .field textarea {
-    border: 2px solid #d7d7d7;
-    width: 300px; }
-  .jazz .field input[type='text'],
-  .jazz .field input[type='password'] {
-    line-height: 25px;
-    font-size: 16px;
-    color: #ccc; }
-  .jazz .field label,
-  .jazz .field .control {
-    float: left; }
-  .jazz .field label {
-    font-weight: bold;
-    clear: both;
-    margin-right: 20px; }
-  .jazz .field.inline {
-    float: left;
-    margin-right: 10px; }
-    .jazz .field.inline label {
-      clear: none; }
-  .jazz .field.textarea textarea {
-    height: 150px; }
-  .jazz .field.radio label {
-    padding-top: 2px;
-    margin-right: 8px; }
-  .jazz .field.check label {
-    padding-top: 1px;
-    margin-right: 8px; }
-  .jazz .field.select label {
-    padding-top: 3px; }
-
 /*
   960 Grid System ~ Core CSS.
   Learn more ~ http://960.gs/
 
   Licensed under GPL and MIT.
 */
+
 /*
   Forces backgrounds to span full width,
   even if there is horizontal scrolling.
@@ -51,18 +12,23 @@
 
   Note: IE6 works fine without this fix.
 */
+
 body {
-  min-width: 960px; }
+  min-width: 960px;
+}
 
 /* `Containers
 ----------------------------------------------------------------------------------------------------*/
+
 .container-12 {
   margin-left: auto;
   margin-right: auto;
-  width: 960px; }
+  width: 960px;
+}
 
 /* `Grid >> Global
 ----------------------------------------------------------------------------------------------------*/
+
 .grid-1,
 .grid-2,
 .grid-3,
@@ -78,7 +44,8 @@ body {
   display: inline;
   float: left;
   margin-left: 10px;
-  margin-right: 10px; }
+  margin-right: 10px;
+}
 
 .push-1, .pull-1,
 .push-2, .pull-2,
@@ -91,206 +58,275 @@ body {
 .push-9, .pull-9,
 .push-10, .pull-10,
 .push-11, .pull-11 {
-  position: relative; }
+  position: relative;
+}
 
 /* `Grid >> Children (Alpha ~ First, Omega ~ Last)
 ----------------------------------------------------------------------------------------------------*/
+
 .alpha {
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 .omega {
-  margin-right: 0; }
+  margin-right: 0;
+}
 
 /* `Grid >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container-12 .grid-1 {
-  width: 60px; }
+  width: 60px;
+}
 
 .container-12 .grid-2 {
-  width: 140px; }
+  width: 140px;
+}
 
 .container-12 .grid-3 {
-  width: 220px; }
+  width: 220px;
+}
 
 .container-12 .grid-4 {
-  width: 300px; }
+  width: 300px;
+}
 
 .container-12 .grid-5 {
-  width: 380px; }
+  width: 380px;
+}
 
 .container-12 .grid-6 {
-  width: 460px; }
+  width: 460px;
+}
 
 .container-12 .grid-7 {
-  width: 540px; }
+  width: 540px;
+}
 
 .container-12 .grid-8 {
-  width: 620px; }
+  width: 620px;
+}
 
 .container-12 .grid-9 {
-  width: 700px; }
+  width: 700px;
+}
 
 .container-12 .grid-10 {
-  width: 780px; }
+  width: 780px;
+}
 
 .container-12 .grid-11 {
-  width: 860px; }
+  width: 860px;
+}
 
 .container-12 .grid-12 {
-  width: 940px; }
+  width: 940px;
+}
 
 /* `Prefix Extra Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container-12 .prefix-1 {
-  padding-left: 80px; }
+  padding-left: 80px;
+}
 
 .container-12 .prefix-2 {
-  padding-left: 160px; }
+  padding-left: 160px;
+}
 
 .container-12 .prefix-3 {
-  padding-left: 240px; }
+  padding-left: 240px;
+}
 
 .container-12 .prefix-4 {
-  padding-left: 320px; }
+  padding-left: 320px;
+}
 
 .container-12 .prefix-5 {
-  padding-left: 400px; }
+  padding-left: 400px;
+}
 
 .container-12 .prefix-6 {
-  padding-left: 480px; }
+  padding-left: 480px;
+}
 
 .container-12 .prefix-7 {
-  padding-left: 560px; }
+  padding-left: 560px;
+}
 
 .container-12 .prefix-8 {
-  padding-left: 640px; }
+  padding-left: 640px;
+}
 
 .container-12 .prefix-9 {
-  padding-left: 720px; }
+  padding-left: 720px;
+}
 
 .container-12 .prefix-10 {
-  padding-left: 800px; }
+  padding-left: 800px;
+}
 
 .container-12 .prefix-11 {
-  padding-left: 880px; }
+  padding-left: 880px;
+}
 
 /* `Suffix Extra Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container-12 .suffix-1 {
-  padding-right: 80px; }
+  padding-right: 80px;
+}
 
 .container-12 .suffix-2 {
-  padding-right: 160px; }
+  padding-right: 160px;
+}
 
 .container-12 .suffix-3 {
-  padding-right: 240px; }
+  padding-right: 240px;
+}
 
 .container-12 .suffix-4 {
-  padding-right: 320px; }
+  padding-right: 320px;
+}
 
 .container-12 .suffix-5 {
-  padding-right: 400px; }
+  padding-right: 400px;
+}
 
 .container-12 .suffix-6 {
-  padding-right: 480px; }
+  padding-right: 480px;
+}
 
 .container-12 .suffix-7 {
-  padding-right: 560px; }
+  padding-right: 560px;
+}
 
 .container-12 .suffix-8 {
-  padding-right: 640px; }
+  padding-right: 640px;
+}
 
 .container-12 .suffix-9 {
-  padding-right: 720px; }
+  padding-right: 720px;
+}
 
 .container-12 .suffix-10 {
-  padding-right: 800px; }
+  padding-right: 800px;
+}
 
 .container-12 .suffix-11 {
-  padding-right: 880px; }
+  padding-right: 880px;
+}
 
 /* `Push Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container-12 .push-1 {
-  left: 80px; }
+  left: 80px;
+}
 
 .container-12 .push-2 {
-  left: 160px; }
+  left: 160px;
+}
 
 .container-12 .push-3 {
-  left: 240px; }
+  left: 240px;
+}
 
 .container-12 .push-4 {
-  left: 320px; }
+  left: 320px;
+}
 
 .container-12 .push-5 {
-  left: 400px; }
+  left: 400px;
+}
 
 .container-12 .push-6 {
-  left: 480px; }
+  left: 480px;
+}
 
 .container-12 .push-7 {
-  left: 560px; }
+  left: 560px;
+}
 
 .container-12 .push-8 {
-  left: 640px; }
+  left: 640px;
+}
 
 .container-12 .push-9 {
-  left: 720px; }
+  left: 720px;
+}
 
 .container-12 .push-10 {
-  left: 800px; }
+  left: 800px;
+}
 
 .container-12 .push-11 {
-  left: 880px; }
+  left: 880px;
+}
 
 /* `Pull Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
+
 .container-12 .pull-1 {
-  left: -80px; }
+  left: -80px;
+}
 
 .container-12 .pull-2 {
-  left: -160px; }
+  left: -160px;
+}
 
 .container-12 .pull-3 {
-  left: -240px; }
+  left: -240px;
+}
 
 .container-12 .pull-4 {
-  left: -320px; }
+  left: -320px;
+}
 
 .container-12 .pull-5 {
-  left: -400px; }
+  left: -400px;
+}
 
 .container-12 .pull-6 {
-  left: -480px; }
+  left: -480px;
+}
 
 .container-12 .pull-7 {
-  left: -560px; }
+  left: -560px;
+}
 
 .container-12 .pull-8 {
-  left: -640px; }
+  left: -640px;
+}
 
 .container-12 .pull-9 {
-  left: -720px; }
+  left: -720px;
+}
 
 .container-12 .pull-10 {
-  left: -800px; }
+  left: -800px;
+}
 
 .container-12 .pull-11 {
-  left: -880px; }
+  left: -880px;
+}
 
 /* `Clear Floated Elements
 ----------------------------------------------------------------------------------------------------*/
+
 /* http://sonspring.com/journal/clearing-floats */
+
 .clear {
   clear: both;
   display: block;
   overflow: hidden;
   visibility: hidden;
   width: 0;
-  height: 0; }
+  height: 0;
+}
 
 /* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
+
 .clearfix:before,
 .clearfix:after {
   content: '\0020';
@@ -298,64 +334,19 @@ body {
   overflow: hidden;
   visibility: hidden;
   width: 0;
-  height: 0; }
+  height: 0;
+}
 
 .clearfix:after {
-  clear: both; }
+  clear: both;
+}
 
 /*
   The following zoom:1 rule is specifically for IE6 + IE7.
   Move to separate stylesheet if invalid CSS is a problem.
 */
+
 .clearfix {
-  zoom: 1; }
+  zoom: 1;
+}
 
-body {
-  line-height: 1.2;
-  font-size: 12px;
-  font-family: Ariel, sans-serif;
-  margin: 0;
-  padding: 0;
-  background: url(/images/body_bg.png); }
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0; }
-
-#logo {
-  position: absolute;
-  top: 35px;
-  left: 0px; }
-
-.masthead {
-  background: url(/images/masthead_bg.png) repeat-x;
-  height: 148px;
-  width: 100%; }
-  .masthead .site-container {
-    position: relative; }
-
-.masthead-top {
-  height: 126px; }
-
-.site-container {
-  width: 960px;
-  margin: 0px auto; }
-
-.nav li {
-  float: left; }
-  .nav li a {
-    display: block;
-    cursor: pointer;
-    line-height: 16px;
-    padding: 3px 6px 2px 6px;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 14px;
-    text-decoration: none; }
-  .nav li.selected a, .nav li:hover a {
-    background-color: #ff9900; }
-
-.clear {
-  clear: both; }
