--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -1,6 +1,7 @@
+$ORANGE: #ff9900;
 @import "components/forms";
 @import "grid";
-$ORANGE: '#ff9900';
+@import "components/links";
 
 body {
   line-height: 1.2;
