adds container lists

--- a/app/views/home/shows.html.haml
+++ b/app/views/home/shows.html.haml
@@ -1,1 +1,11 @@
-%p shows
+.grid-4
+  asjfdkj
+.grid-8
+  %ul.containers
+    %li.container
+      .body
+        blah
+    %li.container
+      .body
+        blah
+.clear
