--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -331,6 +331,11 @@ body {
   .jazz .container.skin-dark {
     background-color: #000; }
 
+.jazz ul.containers li {
+  margin-bottom: 6px; }
+.jazz ul li.last {
+  margin-bottom: 0px !important; }
+
 body {
   line-height: 1.2;
   font-size: 12px;
