--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -3,6 +3,7 @@ $ORANGE: #ff9900;
 @import "grid";
 @import "components/links";
 @import "components/containers";
+@import "components/lists";
 
 body {
   line-height: 1.2;
