--- a/app/views/home/shows.html.haml
+++ b/app/views/home/shows.html.haml
@@ -4,7 +4,18 @@
   %ul.containers
     %li.container
       .body
-        blah
+        %a.box.dark{:href => '#'} SILENT Z
+        %a.box{:href => '#'} Tea Lounge, Brooklyn
+        %h3 Featured Musicians:
+        %ul.inline-list
+          %li
+            %a.box{:href => '#'} Tea Lounge, Brooklyn
+          %li
+            %a.box{:href => '#'} Tea Lounge, Brooklyn
+          %li
+            %a.box{:href => '#'} Tea Lounge, Brooklyn
+          %li.last
+            %a.box{:href => '#'} Tea Lounge, Brooklyn
     %li.container
       .body
         blah
