--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -318,7 +318,8 @@ body {
     line-height: 14px;
     padding: 0px 2px;
     display: inline-block;
-    text-decoration: none; }
+    text-decoration: none;
+    font-weight: bold; }
     .jazz a.box.dark {
       background-color: #000;
       text-transform: uppercase; }
@@ -333,8 +334,21 @@ body {
 
 .jazz ul.containers li {
   margin-bottom: 6px; }
+.jazz ul.inline-list {
+  overflow: hidden; }
+  .jazz ul.inline-list li {
+    float: left;
+    margin-right: 3px; }
+    .jazz ul.inline-list li.last {
+      margin-right: 0px; }
 .jazz ul li.last {
   margin-bottom: 0px !important; }
+
+.jazz h3 {
+  color: #ff9900;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 3px; }
 
 body {
   line-height: 1.2;
