--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -4,6 +4,7 @@ $ORANGE: #ff9900;
 @import "components/links";
 @import "components/containers";
 @import "components/lists";
+@import "components/headers";
 
 body {
   line-height: 1.2;
