--- a/public/stylesheets/sass/components/links.scss
+++ b/public/stylesheets/sass/components/links.scss
@@ -8,6 +8,7 @@
       padding: 0px 2px;
       display: inline-block;
       text-decoration: none;
+      font-weight: bold;
       &.dark {
         background-color: #000;
         text-transform: uppercase;
