--- a/public/stylesheets/components/headers.css
+++ b/public/stylesheets/components/headers.css
@@ -1,18 +1,21 @@
 /*
 Syntax error: Undefined variable: "$ORANGE".
-        on line 3 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/headers.scss
+        on line 7 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/headers.scss
 
-1: .jazz {
-2:   h3 {
-3:     color: $ORANGE;
-4:     font-size: 14px;
-5:     font-weight: bold;
-6:     margin-bottom: 3px;
-7:   }
-8: }
+2:   h1, h2, h3, h4, h5, h6 {
+3:     margin-top: 0px;
+4:   }
+5: 
+6:   h3 {
+7:     color: $ORANGE;
+8:     font-size: 14px;
+9:     font-weight: bold;
+10:     margin-bottom: 5px;
+11:   }
+12: }
 
 Backtrace:
-/Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/headers.scss:3
+/Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/headers.scss:7
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/script/variable.rb:39:in `_perform'
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/script/node.rb:61:in `perform'
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/prop_node.rb:132:in `perform!'
@@ -105,4 +108,4 @@ script/rails:6
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Syntax error: Undefined variable: \"$ORANGE\".\A         on line 3 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/headers.scss\A \A 1: .jazz {\A 2:   h3 {\A 3:     color: $ORANGE;\A 4:     font-size: 14px;\A 5:     font-weight: bold;\A 6:     margin-bottom: 3px;\A 7:   }\A 8: }"; }
+  content: "Syntax error: Undefined variable: \"$ORANGE\".\A         on line 7 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/headers.scss\A \A 2:   h1, h2, h3, h4, h5, h6 {\A 3:     margin-top: 0px;\A 4:   }\A 5: \A 6:   h3 {\A 7:     color: $ORANGE;\A 8:     font-size: 14px;\A 9:     font-weight: bold;\A 10:     margin-bottom: 5px;\A 11:   }\A 12: }"; }
