--- a/public/stylesheets/components/links.css
+++ b/public/stylesheets/components/links.css
@@ -1,31 +1,24 @@
 /*
 Syntax error: Undefined variable: "$ORANGE".
-        on line 6 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/links.scss
+        on line 7 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/links.scss
 
-1: .jazz {
 2:   a {
-3:     font-size: 12px;
-4:     &.box {
-5:       color: #fff;
-6:       background-color: $ORANGE;
-7:       line-height: 14px;
-8:       padding: 0px 2px;
-9:       display: inline-block;
-10:       text-decoration: none;
-11:       font-weight: bold;
+3:     cursor: pointer;
+4:   }
+5:   .box {
+6:     color: #fff;
+7:     background-color: $ORANGE;
+8:     line-height: 14px;
+9:     padding: 2px 2px 0px 2px;
+10:     display: inline-block;
+11:     text-decoration: none;
+12:     font-weight: bold;
 
 Backtrace:
-/Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/links.scss:6
+/Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/links.scss:7
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/script/variable.rb:39:in `_perform'
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/script/node.rb:61:in `perform'
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/prop_node.rb:132:in `perform!'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `map'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:317:in `perform!'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/rule_node.rb:191:in `perform!'
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:305:in `_perform'
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:213:in `perform'
 /Users/dalton/.rvm/gems/ruby-1.8.7-p334@searchandrestore/gems/haml-3.0.25/lib/sass/tree/node.rb:327:in `perform_children'
@@ -115,4 +108,4 @@ script/rails:6
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Syntax error: Undefined variable: \"$ORANGE\".\A         on line 6 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/links.scss\A \A 1: .jazz {\A 2:   a {\A 3:     font-size: 12px;\A 4:     &.box {\A 5:       color: #fff;\A 6:       background-color: $ORANGE;\A 7:       line-height: 14px;\A 8:       padding: 0px 2px;\A 9:       display: inline-block;\A 10:       text-decoration: none;\A 11:       font-weight: bold;"; }
+  content: "Syntax error: Undefined variable: \"$ORANGE\".\A         on line 7 of /Users/dalton/desktop/searchandrestore/public/stylesheets/sass/components/links.scss\A \A 2:   a {\A 3:     cursor: pointer;\A 4:   }\A 5:   .box {\A 6:     color: #fff;\A 7:     background-color: $ORANGE;\A 8:     line-height: 14px;\A 9:     padding: 2px 2px 0px 2px;\A 10:     display: inline-block;\A 11:     text-decoration: none;\A 12:     font-weight: bold;"; }
