--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     = stylesheet_link_tag 'base'
     = csrf_meta_tag
 
-  %body.jazz
+  %body.jazz{:class => @page_class}
   
     - if flash[:notice]
       .flash#notice
