--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -5,6 +5,7 @@ $ORANGE: #ff9900;
 @import "components/containers";
 @import "components/lists";
 @import "components/headers";
+@import "pages/artists";
 
 body {
   line-height: 1.2;
@@ -29,6 +30,7 @@ ul {
   background: url(/images/masthead_bg.png) repeat-x;
   height: 148px;
   width: 100%;
+  margin-bottom: 13px;
   .site-container {
     position: relative;
   }
@@ -40,6 +42,9 @@ ul {
 .site-container {
   width: 960px;
   margin: 0px auto;
+}
+p {
+  margin-top: 0px;
 }
 .nav {
   li {
