grid looking good

--- a/app/views/home/artists_landing.html.haml
+++ b/app/views/home/artists_landing.html.haml
@@ -14,5 +14,5 @@
       .body
         = image_tag('http://dummyimage.com/140x140/000/fff')
         .clear
-        %a.box.block{:href => '#'} Pete Robbins
+        %a.box.block.name{:href => '#'} Pete Robbins
         %p.instrument Alto Saxophone
