--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -12,6 +12,13 @@
         }
         .body {
           padding: 5px 5px 0px 5px;
+          .name {
+            margin-bottom: 2px;
+          }
+          .instrument {
+            margin-bottom: 0px;
+            padding-left: 5px;
+          }
         }
       }
     }
