--- a/public/stylesheets/pages/artists.css
+++ b/public/stylesheets/pages/artists.css
@@ -7,3 +7,8 @@
     clear: both; }
   .jazz.page-artists-landing .artists-grid li .body {
     padding: 5px 5px 0px 5px; }
+    .jazz.page-artists-landing .artists-grid li .body .name {
+      margin-bottom: 2px; }
+    .jazz.page-artists-landing .artists-grid li .body .instrument {
+      margin-bottom: 0px;
+      padding-left: 5px; }
