--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,7 +37,7 @@
             %a{:href => '#'} Resources
           %li
             %a{:href => '#'} Donate
-    .site-container.container-12
+    .site-container.container-12#main-content
       = yield
 
     = javascript_include_tag ['jquery-5.1.min.js']
